<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
	
	<RelativeLayout 
		android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:id="@+findactivity/rl_spinner"
	    android:layout_centerHorizontal="true"
	    android:gravity="center" >
    
	    <Spinner
	        android:id="@+findactivity/sp_departmentselector"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:prompt="@string/directionsactivity_buildingselectorprompt"
	        android:spinnerMode="dialog" />
	    <TextView
	        android:id="@+findactivity/tv_building"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+findactivity/sp_departmentselector"
	        android:textIsSelectable="true"
	        android:gravity="center" />
	</RelativeLayout>
	
	<ImageView
	    android:id="@+findactivity/iv_image"
	    android:visibility="gone"
	    android:layout_centerInParent="true"
	    android:scaleType="fitCenter"
	    android:adjustViewBounds="true"
	    android:layout_below="@+findactivity/rl_spinner"
	    android:layout_above="@+findactivity/ll_buttons"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"/>
	
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:id="@+findactivity/ll_buttons"
	    android:gravity="center"
	    android:layout_alignParentBottom="true" >
	    
	    <Button
	        android:id="@+findactivity/bt_selectstartbuilding"
	        android:layout_alignParentBottom="true"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:text="@string/findactivity_selectstartbuilding" />
	    
	    <Button 
	        android:id="@+findactivity/bt_selectendbuildling"
	        android:layout_alignParentBottom="true"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:text="@string/findactivity_selectendbuilding" />
    </LinearLayout>
</RelativeLayout>